# knowforge

./: .gitignore  AGENTS.md  CLAUDE.md  LICENSE  README.md  pyproject.toml
.github/workflows/: ci.yml
docker/: .env.example  docker-compose.yml
docs/: parallel-processor-spec.md
docs/superpowers/plans/: 2026-04-21-ai-knowledge-base-implementation-plan.md  2026-07-11-production-foundation-hardening.md
docs/superpowers/specs/: 2026-04-21-ai-knowledge-base-design.md  2026-07-11-production-foundation-hardening-design.md
src/: __init__.py  config.py  main.py
src/api/: __init__.py  export.py  failures.py  health.py  qa.py  search.py
src/connectors/: __init__.py  crawl_connector.py  db_connector.py  file_watcher.py  github_connector.py
src/kafka/: __init__.py  consumer.py  producer.py
src/learning/: __init__.py  failure_tracker.py  metrics.py  strategy_store.py
src/processors/: __init__.py  chunker.py  cleaner.py  deduplicator.py  parser.py  vectorizer.py
src/processors/parallel/: __init__.py  coordinator.py  node.py  pool.py  queue.py
src/query/: __init__.py  document_service.py  export.py  graph_query.py  rag.py  vector_search.py
src/schemas/: __init__.py  content.py  events.py
src/storage/: __init__.py  minio_client.py  neo4j_client.py  postgres_client.py  qdrant_client.py
src/utils/: file_utils.py  time.py
tests/api/: test_routes.py
tests/unit/: test_config.py  test_connectors.py  test_coordinator.py  test_health.py  test_kafka.py  test_learning.py  test_processor_node.py  test_processors.py  test_query.py  test_schemas.py  test_storage_clients.py  test_task_queue.py  test_worker_pool.py
