[project]
name = "knowforge"
version = "0.1.0"
description = "AI-ready knowledge ingestion, processing, retrieval, and export"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [
    { name = "Leechy99", email = "leechy.now@gmail.com" }
]
keywords = ["knowledge-base", "ai", "vector-search", "rag", "knowledge-graph"]
classifiers = [
    "Development Status :: 1 - Planning",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]

dependencies = [
    # Web Framework
    "fastapi>=0.109.0",
    "uvicorn[standard]>=0.27.0",
    "pydantic>=2.5.0",
    "pydantic-settings>=2.1.0",
    "python-multipart>=0.0.6",

    # Kafka
    "aiokafka>=0.10.0",
    "kafka-python>=2.0.2",

    # Database
    "asyncpg>=0.29.0",
    "psycopg2-binary>=2.9.9",
    "sqlalchemy[asyncio]>=2.0.25",
    "sqlalchemy>=2.0.25",

    # Graph Database
    "neo4j>=5.15.0",

    # Vector Search
    "qdrant-client>=1.7.0",

    # Object Storage
    "boto3>=1.34.0",
    "minio>=7.2.0",

    # Document Processing
    "pdfplumber>=0.10.3",
    "python-docx>=1.1.0",
    "markdown-it-py>=3.0.0",
    "beautifulsoup4>=4.12.3",
    "lxml>=5.1.0",
    "playwright>=1.41.0",
    "scrapy>=2.11.0",
    "html2text>=2020.1.16",

    # ML / Embeddings
    "sentence-transformers>=2.3.0",
    "torch>=2.1.0",
    "numpy>=1.26.0",

    # Text Processing
    "tiktoken>=0.5.0",
    "simhash>=2.1.0",

    # Utilities
    "watchdog>=3.0.0",
    "httpx>=0.26.0",
    "chardet>=5.2.0",
    "python-dateutil>=2.8.0",
    "tenacity>=8.2.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "pytest-asyncio>=0.23.0",
    "pytest-cov>=4.1.0",
    "pytest-mock>=3.12.0",
    "ruff>=0.1.0",
    "mypy>=1.8.0",
    "pre-commit>=3.6.0",
    "debugpy>=1.8.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP"]
ignore = ["E501"]

[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["F401"]

[tool.mypy]
python_version = "3.11"
strict = true
warn_return_any = true
warn_unused_ignores = true

[[tool.mypy.overrides]]
module = ["aiokafka", "asyncpg", "boto3", "botocore.*", "simhash", "yaml"]
ignore_missing_imports = true

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
python_files = ["test_*.py"]
python_functions = ["test_*"]
addopts = "-v --tb=short"

[tool.coverage.run]
source = ["src"]
omit = ["tests/*", "**/__pycache__/*"]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise AssertionError",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
    "if TYPE_CHECKING:",
]
